Fixed input styling on small screens

--- a/Resources/styling.css
+++ b/Resources/styling.css
@@ -127,16 +127,16 @@
 }
 
 .fuel-inp-div {
-  float: right;
-  margin-left: auto;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
   margin-right: 15px;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin-left: auto;
 }
 
 .fuel-inp {
   width: 100px;
-  padding-right: 24px;
+  padding-right: 6px;
   font-size: 20px;
   text-align: right;
   font-weight: 350;
@@ -154,7 +154,7 @@
 .fuel-inp-span {
   font-size: 20px;
   font-weight: 350;
-  margin-left: -20px;
+  white-space: nowrap;
 }
 
 select {
